# dlTidy

./: .envrc  .gitignore  README.md  pyproject.toml  settings.ini  settings.toml
dltidy/: __main__.py  test.py
