[tool.poetry]
name = "dltidy"
version = "0.1.0"
description = ""
authors = ["ngmtine <ngmfries@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.2.17"
tqdm = "^4.64.1"
mutagen = "^1.46.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
